syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/MsgTask.proto

import "Task.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "MsgTaskProto";


enum RequestType{
    TASK_ALL = 0;       // 所有任务
    TASK_STATE = 1;     // 当前已经接的任务
    TASK_RECEIVE = 2;   // 接收任务
    TASK_GIVE_UP = 3;   // 放弃任务
    TASK_COMMON = 4;    // 公共
    TASK_SUBMIT = 5;    // 递交任务
}


message RequestTask{
    int64 userId = 1;
    int64 taskId = 2;

    RequestType type = 3;
}

message ResponseTask{
    int32 result = 1;
    string content = 2;

    repeated Task task = 3;
    RequestType type = 4;
}


